code/web_app/openstack-deployment/app-manifest.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-02-07T13:11:33Z"
  generation: 1
  labels:
    run: test-app
  name: test-app
  namespace: default
  resourceVersion: "850758"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/test-app
  uid: e3ef2566-2ad9-11e9-9f0c-fa163e222531
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: test-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: test-app
    spec:
      containers:
      - image: host-172-16-113-64.nubes.stfc.ac.uk/piezo-resources/web_app:latest
        imagePullPolicy: Always
        name: test-app
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
