code/web_app/openstack-deployment/piezo-web-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: piezo-app-service
  namespace: default
  labels:
    piezo-status: test
spec:
  selector:
    run: test-app
  ports:
  - name: web
    port: 8888
