code/web_app/openstack-deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  labels:
    run: test-app
spec:
  replicas: 1
  selector: # which pods to manage
    matchLabels:
      run: test-app
  template: # Defining the pods
    metadata:
      labels:
        run: test-app
    spec:
      containers:
      - name: piezo
        image: host-172-16-113-64.nubes.stfc.ac.uk/piezo-resources/web_app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
---
kind: Service
apiVersion: v1
metadata:
  name: piezo-app-service
  namespace: default
  labels:
    piezo-status: test
spec:
  selector:
    run: test-app
  ports:
  - name: web
    port: 8888
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: piezo-ingress
spec:
  rules:
    - host: host-172-16-113-146.nubes.stfc.ac.uk
    #- host: prometheus.piezo.ac.uk
      http:
        paths:
          - backend:
              serviceName: piezo-app-service
              servicePort: web
            path: /piezo/
