code/web_app/openstack-deployment/web-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: piezo-ingress
spec:
  rules:
    - host: host-172-16-113-146.nubes.stfc.ac.uk
    #- host: prometheus.piezo.ac.uk
      http:
        paths:
          - backend:
              serviceName: piezo-app-service
              servicePort: web
            path: /piezo/
